'''
Test docstring
that takes two lines
'''

load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "G",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Pods/OnlyPre",
        "//Pods/Public",
    ],
)

ios_unit_test(
    name = "G-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "11.0",
    module_name = "G_Unit_Tests",
    swift_version = "5.2",
    deps = [":G"],
)

ios_application(
    name = "G-App",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = "org.cocoapods.G-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "11.0",
    module_name = "G_App",
    swift_version = "5.2",
    deps = [
        ":G",
        "//Frameworks/a:A",
    ],
)
